# ActionWASM

./: .env.example  .gitignore  AGENTS.MD  DEMO-FIX-SUMMARY.md  DEMO-README.md  README.md  build.sh  demo.html  demo.js  designer-checklist.md  examples-and-case-studies.md  implementation-priority.md  package.json  roguelike-arpg-design-bible.md  serve-demo.sh  test-canvas-fix.html  test-demo-debug.html  test-demo-monitor.html  test-demo.html  test-variables.html  tuning-tables.md
.cargo/: config.toml
.github/workflows/: deploy.yml
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: game-loader.ts  landing.css  main.ts  style.css  ui.ts  webrtc.ts
game/: Cargo.toml
game/.cargo/: config.toml
game/src/: combat.rs  components.rs  enemy.rs  game.rs  lib.rs  main.rs  movement.rs  network.rs  resources.rs  room.rs
game/src/systems/: input.rs  mod.rs  physics.rs  rendering.rs
signaling/: package.json  server.js
