[package]
name = "wasm-multiplayer-game"
version = "0.1.0"
edition = "2021"
authors = ["Game Developer"]
description = "A lightweight multiplayer browser game using WebAssembly"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_pbr",
    "bevy_gilrs",
    "webgl2",
    "x11",
    "wayland",
    "serialize",
] }
bevy_rapier2d = { version = "0.27", features = ["wasm-bindgen"], optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "console",
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcDataChannelInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "MessageEvent",
    "WebSocket",
    "BinaryType",
    "Location",
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"

[features]
default = []
physics = ["bevy_rapier2d"]